# PaperPilot

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: chat_history_20260215_225926.md  chat_history_20260215_230809.md  federated_learning_kd_survey.md
examples/logger_examples/: llm_streaming_example.py  logger_usage_example.py  markdown_streamer_example.py  status_example.py
src/config/: __init__.py  prompt.py  settings.py
src/core/: __init__.py  _agent.py  agent.py  agnet.py  llm_interface.py
src/llms/: __init__.py  llm_factory.py  ollama_llm.py  openai_llm.py  zhipu_llm.py
src/models/: __init__.py  message.py  paper_context.py
src/tools/: __init__.py  arxiv_download_tool.py  arxiv_search_tool.py  file_read_tool.py  file_write_tool.py  pdf_read_tool.py  register.py  time_sleep_tool.py  tool_base.py
src/utils/: __init__.py  json_extract.py  logger_factory.py  markdown_streamer.py  session_store.py  validation.py
