[project]
name = "paperpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.0",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.7.0",
    "rich>=14.3.2",
    "typst>=0.14.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
]
